# fullstack-app-with-claude

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKEND_ANALYSIS_REPORT.md  BACKEND_ISSUES_SUMMARY.md  CLAUDE.md  Makefile  README.md
.claude/: settings.json
.claude/agents/: doc-consistency-checker.md
.claude/commands/: create_pr.md  define_spec.md  review_backend.md  review_backend_with_spec.md  review_frontend.md  review_frontend_with_spec.md
.devcontainer/: devcontainer.json  setup.sh
.github/scripts/: generate-release-notes.sh
.github/workflows/: ci.yml  deploy.yml  terraform-unlock.yml  terraform.yml
backend/: .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  create_tables.py  create_user.py  entrypoint.sh  nginx.conf  pyproject.toml
backend/app/: __init__.py  config.py  database.py  limiter.py  logger.py  main.py
backend/app/models/: __init__.py  refresh_token.py  schema_migration.py  todo.py  user.py
backend/app/repositories/: refresh_token_repository.py  todo_repository.py  user_repository.py
backend/app/routes/: __init__.py  auth_routes.py  dependencies.py  health.py  password_routes.py  todo_routes.py  user_routes.py
backend/app/schemas/: __init__.py  auth.py  password.py  todo.py  user.py
backend/app/services/: auth_service.py  password_service.py  todo_service.py  user_service.py
backend/app/utils/: auth_decorator.py  password.py  password_generator.py  password_hash_validator.py
backend/backend/: __init__.py
backend/scripts/: apply_sql_migrations.py  create_admin.py  create_tables.py  create_user.py  generate_admin_hash.py  grant_iam_permissions.py  run_migrations.sh  run_poetry_tool.py
backend/tests/: conftest.py  factories.py  helpers.py  test_database.py  test_health.py  test_logger.py
backend/tests/models/: test_schema_migration.py
backend/tests/routes/: test_auth_routes.py  test_password_routes.py  test_rate_limiting.py  test_todo_routes.py  test_user_routes.py
backend/tests/scripts/: test_apply_sql_migrations.py
backend/tests/security/: test_authorization.py
backend/tests/services/: test_auth_service.py  test_password_service.py  test_todo_service.py  test_user_service.py
docs/: 00_development.md  01_system-architecture.md  02_authentication-authorization.md  03_feature-list.md  04_database-design.md  05_api-design-guide.md  06_testing-strategy.md  07_documentation-guide.md  08_e2e-test-list.md  09_cicd-setup-guide.md  api-design-guide.md  authentication-authorization.md  database-design.md  development.md  documentation-guide.md  feature-list.md  integration-tests.md  system-architecture.md  testing-strategy.md  環境構築.md  環境構築タスクチェックリスト.md  環境構築具体化.md
frontend/: .env.example  .env.production.example  .prettierignore  CLAUDE.md  Dockerfile.dev  eslint.config.js  package.json  pnpm-lock.yaml  test_output.txt  test_output_2.txt  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/docs/: TESTING.md
frontend/scripts/: format.mjs  run-eslint.mjs  run-vitest-related.mjs  test.mjs
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
infra/: .env.example  docker-compose.yml
infra/terraform/: .terraform.lock.hcl  README_CLOUD_SQL.md  SETUP_CHECKLIST.md  apis.tf  artifact-registry.tf  backend.tf  cloud-run-job.tf  cloud-run.tf  cloud-sql.tf  cloud-storage.tf  (+6 more)
specs/: 001_transaction_management_refactor.md  002_sqlalchemy_api_migration.md  003_password_security_fix.md  004_error_response_standardization.md  005_config_centralization.md  006_validation_exception_unification.md  007_todo_update_simplification.md  008_cors_multi_domain.md  009_logging_standardization.md  010_pydantic_orm_mode_consistency.md  README.md  adminアカウントの追加.md  base.md  cicd-refactoring.md  cicd.md  cloudsql-connector-approachA-instructions-ja.md  documentation-consistency-fixes.md  frontend-refactoring.md  tag-based-deployment.md
(+94 files in other folders)
